# Virtualization

./: .gitignore  CMakeLists.txt  README.md  Virtualization.sln  clean.sh  cls.bat  compile.sh  config.sh  premake5.lua  run.sh  setup.bat
.github/: FUNDING.yml
Application/: Application.vcxproj  Application.vcxproj.filters
Application/include/: render.h  win.h
Application/lib/: glfw3.lib
Application/src/: main.cpp  render.cpp  win.cpp
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/include/: engine.h
Engine/src/: engine.cpp
application/: CMakeLists.txt
application/include/: window.h
application/src/: main.cpp  window.cpp
engine/: CMakeLists.txt
engine/include/: engine.h
engine/src/: engine.cpp  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
